--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Header -->			
 <header id="header">
     <div class="inner">
-    	<a href="#" class="image avatar"><img src="images/profile.jpg" alt="Profile" /></a>
+    	<a href="#" class="image avatar"><img src="images/profile.png" alt="TEST" /></a>
     </div>
 </header>	
 	
