--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 				</li>
 				<li>
 					<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-					303.253.2857
+					858.413.6113
 				</li>
 				<li>
 					<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-					<a href="mailto:nicholas.perdue@humboldt.edu">nicholas.perdue@humboldt.edu</a>
+					<a href="mailto:jr184@humboldt.edu">jr184@humboldt.edu</a>
 				</li>
 			</ul>
 		</div>
