--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 			<article class="6u 12u$(xsmall) work-item">
 				<h2>Lab 1: Pipelines and Oil Spills</h2>
 				<a href="images/fulls/Pipeline_Oil_Spill.jpg" class="image fit thumb"><img src="images/thumbs/Pipelines_Thumb.jpg" alt="" /></a>
-				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<h3>Pipelines Spills in 48 Contiguous States</h3>
+				<p>This maps visually demonstrates what types of pipeline spills have occured throughout the 48 contiguous states, in relation to their respective pielines.<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
