--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 				<h2>Lab 1: Pipelines and Oil Spills</h2>
 				<a href="images/fulls/Pipeline_Oil_Spill.jpg" class="image fit thumb"><img src="images/thumbs/Pipelines_Thumb.jpg" alt="" /></a>
 				<h3>Pipelines Spills in 48 Contiguous States</h3>
-				<p>This maps visually demonstrates what types of pipeline spills have occured throughout the 48 contiguous states, in relation to their respective pielines.<a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p style="font-size: 12px;">This maps visually demonstrates what types of pipeline spills have occured throughout the 48 contiguous states, in relation to their respective pielines.<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
 			<article class="6u 12u$(xsmall) work-item">
 				<h2>Lab 2: Bivariate ACA</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
-				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<h3>Who Really is in Need of help?</h3>
+				<p>COMING SOON.<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -56,7 +56,7 @@
 				<h2>Lab 3: Sea Level Rise Map</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -64,7 +64,7 @@
 				<h2>Lab 4: IsoChrone PP Access</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -72,7 +72,7 @@
 				<h2>Lab 5: Climate Migration Hexbins</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -80,7 +80,7 @@
 				<h2>Lab 6: Leaflet Drone Map</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -88,7 +88,7 @@
 				<h2>Lab 7: Interactive Leaflet/JQuery Map</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
@@ -96,7 +96,7 @@
 				<h2>Lab 8: Final Project</h2>
 				<a href="images/fulls/placeholder.png" class="image fit thumb"><img src="images/thumbs/placeholder_thumb.png" alt="" /></a>
 				<h3>Arcata Marsh Mural</h3>
-				<p>Describe some aspects of the map here. <a href="images/fulls/placeholder.png" download>Download Image</a>
+				<p>Pending...<a href="images/fulls/placeholder.png" download>Download Image</a>
 				</p>
 			</article>
 
