--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<h2>Recent Work</h2>
 		<div class="row">
 
-			<article class="6u 12u$(xsmall) work-item">
+			<article class="6u 12u$(xsmall) work-item" style="margin-bottom: 0px;"> <!--Temporary Fix, remove in due time.-->
 				<h2>Lab 1: Pipelines and Oil Spills</h2>
 				<a href="images/fulls/Pipeline_Oil_Spill.jpg" class="image fit thumb"><img src="images/thumbs/Pipelines_Thumb.jpg" alt="" /></a>
 				<h3>Pipelines Spills in 48 Contiguous States</h3>
